--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "src",
+    "example"
   ],
   "scripts": {
     "dev": "vite",
