--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "@lexical/utils": "^0.27.1",
     "lexical": "^0.27.1",
     "react": "^15.0.1 || ^16.0.0 || ^17.0.0 || ^18.0.0",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
