--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "files": [
-    "dist",
-    "src",
-    "example"
+    "dist"
   ],
   "scripts": {
     "dev": "vite",
