--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@eslint/js": "^9.16.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/exec": "^7.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/gitlab": "^13.2.4",
     "@semantic-release/npm": "^12.0.1",
