--- a/.releaserc.json
+++ b/.releaserc.json
@@ -4,10 +4,12 @@
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
-    {
-      "path": "@semantic-release/exec",
-      "cmd": "npm run build"
-    },
+    [
+      "@semantic-release/exec",
+      {
+        "prepareCmd": "npm run build"
+      }
+    ],
     "@semantic-release/npm",
     [
       "@semantic-release/github",
