--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "lexical": "^0.27.1",
     "react": "^15.0.1 || ^16.0.0 || ^17.0.0 || ^18.0.0",
     "react-dom": "^18.3.1",
-    "uuidv4": "^6.2.13"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
