--- a/.releaserc.json
+++ b/.releaserc.json
@@ -4,6 +4,10 @@
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
+    {
+      "path": "@semantic-release/exec",
+      "cmd": "npm run build"
+    },
     "@semantic-release/npm",
     [
       "@semantic-release/github",
