--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "@lexical/selection": "^0.27.1",
     "@lexical/utils": "^0.27.1",
     "lexical": "^0.27.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -103,7 +103,8 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.16.0",
     "vite": "^5.4.11",
-    "vite-plugin-dts": "^4.5.0"
+    "vite-plugin-dts": "^4.5.0",
+    "vite-plugin-lib-inject-css": "^2.2.1"
   },
   "eslintConfig": {
     "extends": [
